--- a/public/static/tagok.html
+++ b/public/static/tagok.html
@@ -2,58 +2,117 @@
 
 <head>
   <title>Tagok</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="/logo.png" type="image/x-icon"/>
 </head>
 
 <body style="width:100%; margin: 0">
-  <table style="width:100%; height: 100px;background-color:#0B4F6C; border-color:black;">
-    <tr style=" height: 100px">
-      <th class="borderdebug" style="width:20%; height: 100%">
-        <a href="/tagok">
-          
-        </a>
-        <h1 class="wtext" style="text-align: right; margin-right: 15px;font-size: 70px" >
-          Cuccosch
-        </h1>
-      </th>
-      <th class="borderdebug" style="height: 100% " >
-        <!--<img src="images/cuccosch_logo.png" alt="logo" style="height: 100%"/>-->
-      </th>
-      <th class="borderdebug" style="width: 19%">
-        <a href="/">
-          <h1 class="wtext pages">
-            Cuccok
-          </h1>
-        </a>
+<table style="width:100%; height: 100px;background-color:#0B4F6C; border-color:black;">
+  <tr style=" height: 100px">
+    <th class="borderdebug" style="width:20%; height: 100%">
+      <a href="/tagok">
 
-      </th>
-      <th class="borderdebug" style="width: 17%">
-        <h1 class="wtext pages" style="background-color: #b80c09">
-          Tagok
-        </h1>
-      </th>
-      <th class="borderdebug" style="width: 15%">
+      </a>
+      <h1 class="wtext" style="text-align: right; margin-right: 15px;font-size: 70px" >
+        Cuccosch
+      </h1>
+    </th>
+    <th class="borderdebug" style="height: 100% " >
+      <!--<img src="images/cuccosch_logo.png" alt="logo" style="height: 100%"/>-->
+    </th>
+    <th class="borderdebug" style="width: 19%">
+      <a href="index.html">
         <h1 class="wtext pages">
-          Info
+          Cuccok
         </h1>
-      </th>
+      </a>
 
-    </tr>
-  </table>
-  <h1 style="margin-left: 15px">Tagok listája</h1>
-  <ul>
-    <li>Tag1</li>
-    <li>Tag2</li>
-    <li>Tag3</li>
-  </ul>
-  <a href="/tagok/uj" style="position: absolute; right: 5%; bottom: 5%">
-    <h1 style="font-family: Century Gothic, sans-serif;">
-      Új tag hozzáadása
-    </h1>
-  </a>
+    </th>
+    <th class="borderdebug" style="width: 17%">
+      <h1 class="wtext pages" style="background-color: #b80c09">
+        Tagok
+      </h1>
+    </th>
+    <th class="borderdebug" style="width: 15%">
+      <h1 class="wtext pages">
+        Info
+      </h1>
+    </th>
+
+  </tr>
+</table>
+<table style="width:80%; height:60%; padding-top: 50px;margin-left: 10%">
+  <tr style="width:80%; height: 5%; text-align: center">
+    <th class="borderdebug, szobacol">
+      Szoba
+    </th>
+    <th class="borderdebug, cucccol">
+      Cuccok
+    </th>
+    <th class="borderdebug, tagcol">
+      Lakok
+    </th>
+
+    <th class="borderdebug, editcol">
+    </th>
+
+    <th class="borderdebug, deletecol">
+
+    </th>
+  </tr>
+  <tr style="background: #DDDDDD; height: 20%"; >
+    <th class="borderdebug, szobacol">
+      710
+    </th>
+    <th class="borderdebug, cucccol">
+      Hajszarito
+    </th>
+    <th class="borderdebug, tagcol">
+      Pistike<br>
+      Jozsika<br>
+      Én<br>
+    </th>
+
+    <th class="borderdebug, editcol">
+      <a href="/edit.html">
+        Edit
+      </a>
+    </th>
+
+    <th class="borderdebug, deletecol">
+      delete
+    </th>
+  </tr>
+  </tr>
+  <tr style="background: #DDDDDD">
+    <th class="borderdebug, namecol">
+      Eloszto
+    </th>
+    <th class="borderdebug, avcol">
+      Foglalt
+    </th>
+    <th class="borderdebug, placecol">
+      801
+    </th>
+
+    <th class="borderdebug, editcol">
+      <a href="/edit.html">
+        Edit
+      </a>
+    </th>
+
+    <th class="borderdebug, deletecol">
+      delete
+    </th>
+  </tr>
+</table>
+<a href="ujtag.html" style="position: absolute; right: 5%; bottom: 5%">
+  <h1 style="font-family: Century Gothic, sans-serif; font-size: 50px; background: #b80c09; border-radius: 50%;
+   width:55px; height:55px; text-align: center; padding-bottom: 5px; vertical-align: center; color:white">
+    +
+  </h1>
+</a>
 </body>
 
 
 </html>
-<style></style>
